# forex-volatility-analysis

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  REPORT.md  config.yaml  fx_volatility_analysis.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: index.html
app/: streamlit_app.py
data/: fx_ohlc_2022_2024.parquet
docs/: api.md  index.md
notebooks/: fx_volatility_analysis.ipynb
report/: report.tex
scripts/: check_numbers.py  compute_results.py
search/: search_index.json
src/fxvol/: __init__.py  backtest.py  config.py  data.py  diagnostics.py  evt.py  indicators.py  models.py  plots.py  preprocessing.py  realized.py  risk.py  stats_backtest.py
tests/: test_backtest.py  test_conditional_var.py  test_evt.py  test_indicators.py  test_models.py  test_preprocessing.py  test_realized.py  test_risk.py  test_stats_backtest.py  test_tsmom.py
