[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fxvol"
version = "0.1.0"
description = "Reproducible FX volatility, risk and backtesting toolkit (EUR/USD, GBP/USD, USD/JPY)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dan Allouche" }]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "arch>=7.0",
    "yfinance>=0.2",
    "pyarrow>=15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0", "pytest-cov>=4", "hypothesis>=6", "ruff>=0.5", "mypy>=1.8",
    "nbstripout>=0.7", "nbconvert>=7.0", "papermill>=2.5", "jupyter>=1.0", "ipykernel>=6",
]
app = ["streamlit>=1.30"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
files = ["src/fxvol"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
# Pragmatic config: type-check the public surface without blocking on the
# heavy scientific-stack call sites (pandas/scipy/arch dynamic typing).

[tool.coverage.run]
source = ["fxvol"]
branch = true
